[gd_scene load_steps=10 format=3 uid="uid://r8rkmjmheiye"]

[ext_resource type="Shader" path="res://scenes/pause_menu.gdshader" id="1_3cj21"]
[ext_resource type="FontFile" uid="uid://bxj0ooyvfabuu" path="res://fonts/minecrafter/Minecrafter.Reg.ttf" id="1_e83yx"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_ijsc8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a82p8"]
shader = ExtResource("1_3cj21")
shader_parameter/lod = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_186kp"]
font = ExtResource("1_e83yx")
font_size = 74

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d8vtg"]
content_margin_top = 50.0
content_margin_bottom = 50.0

[sub_resource type="Animation" id="Animation_sktmj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pause Container:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c8ueo"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.821]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pause Container:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3gnf"]
_data = {
"RESET": SubResource("Animation_sktmj"),
"blur": SubResource("Animation_c8ueo")
}

[node name="pause_menu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ijsc8")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_a82p8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause Container" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -228.0
offset_right = 270.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="PAUSE LABEL" type="Label" parent="Pause Container/VBoxContainer"]
layout_mode = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_186kp")
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="Pause Container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_e83yx")
theme_override_font_sizes/font_size = 30
text = "RESUME"

[node name="SettingsBtn" type="Button" parent="Pause Container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_e83yx")
theme_override_font_sizes/font_size = 30
text = "SETTINGS"

[node name="QuitBtn" type="Button" parent="Pause Container/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_e83yx")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="Settings Node" type="Control" parent="."]
process_mode = 2
layout_mode = 2
anchors_preset = 0
offset_left = 286.0
offset_top = 71.0
offset_right = 866.0
offset_bottom = 577.0

[node name="Settings Container" type="MarginContainer" parent="Settings Node"]
layout_mode = 2
offset_left = -200.0
offset_right = 780.0
offset_bottom = 506.0
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="BG container" type="PanelContainer" parent="Settings Node/Settings Container"]
layout_mode = 2

[node name="SETTINGS" type="Label" parent="Settings Node/Settings Container"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_d8vtg")
text = "Settings"
label_settings = SubResource("LabelSettings_186kp")
horizontal_alignment = 1

[node name="Internal Margin" type="MarginContainer" parent="Settings Node/Settings Container"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Settings Node/Settings Container/Internal Margin"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Settings Node/Settings Container/Internal Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 25
columns = 2

[node name="MusicLabel" type="Label" parent="Settings Node/Settings Container/Internal Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_e83yx")
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Settings Node/Settings Container/Internal Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5

[node name="SFXLabel" type="Label" parent="Settings Node/Settings Container/Internal Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_e83yx")
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Settings Node/Settings Container/Internal Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5

[node name="ReturnBtn" type="Button" parent="Settings Node/Settings Container/Internal Margin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_e83yx")
theme_override_font_sizes/font_size = 30
text = "return"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t3gnf")
}

[connection signal="pressed" from="Pause Container/VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Pause Container/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="Pause Container/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="value_changed" from="Settings Node/Settings Container/Internal Margin/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Settings Node/Settings Container/Internal Margin/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Settings Node/Settings Container/Internal Margin/ReturnBtn" to="." method="_on_return_btn_pressed"]
